--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
         <input type="text" id="awbTextbox" placeholder="Masukkan nomor resi">
         <select id="courierSelect">
             <option value="jne">JNE</option>
-            <option value="jnt">JNT</option>
+            akjshdfkahsjdfbkjahsdbf            
+            option value="jnt">JNT</option>
             <option value="sicepat">SiCepat</option>
             <option value="anteraja">AnterAja</option>
             <option value="spx">Shopee Express</option>
